--- a/configs/infer__local_cgibl_webim.yml
+++ b/configs/infer__local_cgibl_webim.yml
@@ -1,7 +1,7 @@
-name: dartmouth_synthetic_Batch01_Ch2_001_CH010
-indir: ../../../1_Data/PRC/TOMS/Dartmouth_Synthetic/data/Batch_01__777ad3fa-d7f6-4213-ae9f-e49aeba7f4d5/frames_Ch2_001_CH010
-outdir: ../../../1_Data/MOD/results/yolox-train-cgiweb/yolox-train-cgiwebimages_1638889164_9a6e063b/test_results/bbox_infered
-ckpt: ../../../1_Data/MOD/results/yolox-train-cgiweb/yolox-train-cgiwebimages_1638889164_9a6e063b/model_outputs/best_ckpt.pth
+name: dartmouth_Batch01
+indir: ../data/Batch_01/frames_CH010
+outdir: ../results/yolox-train-cgiweb/test_results/bbox_infered
+ckpt: ../results/yolox-train-cgiweb/model_outputs/best_ckpt.pth
 model_name: yolox-s
 conf: 0.2
 nms: 0.4
