--- a/configs/train__local_webimages_fullbed.yml
+++ b/configs/train__local_webimages_fullbed.yml
@@ -1,7 +1,7 @@
 experiment: yolox-train-webimages
 environment: yolox
-indir: ../../../1_Data/DRV/TOMS/train_sets/Web_Images/hospital_beds
-outdir: ../../../1_Data/MOD/results/yolox-train-webimages
+indir: ../Data/train_sets/Web_Images/hospital_beds
+outdir: ../Data/results/yolox-train-webimages
 max_epoch: 10
 batch_size: 5
 model_name: yolox-s
